fix sponsorship align

--- a/src/App.css
+++ b/src/App.css
@@ -275,6 +275,7 @@ p {
     margin-top: 0;
     padding: 0;
     font-size: 1.2rem;
+    text-align: center;
 }
 
 #cta {
